Bug 479131 - Scheduled transactions always have one month frequency regardless of the set value
Summary: Scheduled transactions always have one month frequency regardless of the set ...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.1.3
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-12-28 21:09 UTC by Szőts Ákos
Modified: 2024-06-04 05:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Szőts Ákos 2023-12-28 21:09:30 UTC
Create a new scheduled transaction with other than "1 month" schedule. My examples are "1 year" and "28 days".

No matter what I set in the frequency drop-down, in the ledger the next instance appears exactly one month later anyway.
Comment 1 Thomas Baumgart 2023-12-31 09:18:41 UTC
I am unable to reproduce this behavior. The entry in the ledger depends on the date entered into the date field of the schedule which is used as the first due date when you create the schedule. Usually it is prefilled with the current date which would explain the behavior you experience. Did you modify this date to the next due date of your schedule? Does the behavior change when you change that date?
Comment 2 Bug Janitor Service 2024-01-15 03:45:24 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 3 Bug Janitor Service 2024-01-30 03:45:33 UTC
This bug has been in NEEDSINFO status with no change for at least
30 days. The bug is now closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

Thank you for helping us make KDE software even better for everyone!
Comment 4 Szőts Ákos 2024-06-02 17:05:02 UTC
I did some more financial accounting in KMyMoney which involved scheduled transactions and I figured out what is the issue.

When you create a new scheduled transaction, the window has the defaults already filled out. This includes the one month frequency setting  and the T+1 month as the next occurrence date pre-filled.

However, when you change the frequency to something else than exactly one month, e.g. to one year, the next occurrence date won't change, it still stays as today + 1 month.

The problem is that the correction from the user side is not automatic (and also not apparent that it has to be made; this is why this bug report was born in the first place).

The user has the following choices:
- Calculate themselves manually when the next occurrence will happen, including bank holidays, etc and put that value in. This can be done by KMyMoney in other cases.
- Set the next occurrence date back to today, and cancel today's event manually in the ledger. This way the next real occurrence will be automatic (my solution).

All of these depend on that the user noticed that the next occurrence date became invalid at the point when they changed the frequency or the frequency value.

If the next occurrence is in less than one month, KMyMoney will probably skip that, too, until T+1 month kicks in.
Comment 5 Thomas Baumgart 2024-06-04 05:15:29 UTC
Git commit b4da4201ae8a7397c02c10a0fb2626b4ea874cfd by Thomas Baumgart.
Committed on 04/06/2024 at 05:15.
Pushed by tbaumgart into branch 'master'.

Show warning when a schedule's frequency is changed
FIXED-IN: 5.2

M  +22   -0    kmymoney/views/keditscheduledlg.cpp

https://invent.kde.org/office/kmymoney/-/commit/b4da4201ae8a7397c02c10a0fb2626b4ea874cfd