Show warning when a schedule's frequency is changed

BUG: 479131
FIXED-IN: 5.2